--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="jquery/jquery.mobile-1.4.5.min.css">
     <script src="jquery/jquery-1.11.3.min.js"></script>
     <script src="jquery/jquery.mobile-1.4.5.min.js"></script>
+    <script src="jquery/handlebars-v3.0.3.js"></script>
     <script src="main.js"></script>
           
 </head>
