--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </div><!-- /page -->
 <div data-role="page" id="detail">
 
-    <div data-role="header">
+    <div id="detailheader" data-role="header">
         <h1>Add Location</h1>
         <a href="#main">Back to foo</a>
     </div><!-- /header -->
