Linked Stylesheet to html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="jquery/jquery-1.11.3.min.js"></script>
     <script src="jquery/jquery.mobile-1.4.5.min.js"></script>
     <script src="jquery/handlebars-v3.0.3.js"></script>
+	<link rel="stylesheet" type="text/css" href="indexStyle.css">
     <script src="main.js"></script>
           
 </head>
