--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 		<div data-role="page" id="main">
 			<div data-role="header">
 				<h1>MobileWeather</h1>
-				<button class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location">location</button>
-				<a href="#add" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
+				<button id="locateMe" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location">location</button>
+				<a href="#add" id="addLocation" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 			<div role="main" class="ui-content">
 				<form>
