Added Img in Locationlist

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<script id="mainListItem" type="text/x-handlebars-template">
 			<div class="mainListItems" id="{{city.id}}">
 				<div class="listItemImage">
-					
+					<img src="http://openweathermap.org/img/w/{{list.0.weather.0.icon}}.png">
 				</div>
 				<div class="listItemCityName">
 					<h1>{{city.name}}</h1>
