--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<h1>{{city.name}}</h1>
 				</div>
 				<div class="listItemTemp">
-					{{list.0.temp.day}}
+					{{list.0.temp.day}}&deg;C 
 				</div>
 			</div>
 		</script>
