Changed Back Buttons and Show Errormessage only for 5 seconds

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<div data-role="page" id="main">
 			<div data-role="header">
 				<h1>MobileWeather</h1>
-				<button id="locateMe" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location">location</button>
+				<button id="locateMe" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location"></button>
 				<a href="#add" id="addLocation" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 			<div role="main" class="ui-content">
@@ -51,7 +51,7 @@
 		<div data-role="page" id="add">
 			<div data-role="header">
 				<h1>Add Location</h1>
-				<a href="#main">Back to foo</a>
+				<a href="#main" class="ui-btn ui-icon-carat-l ui-btn-icon-left ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 
 			<div role="main" class="ui-content">
@@ -67,7 +67,7 @@
 
 			<div id="detailheader" data-role="header">
 				<h1>Location</h1>
-				<a href="#main">Back to foo</a>
+				<a href="#main" class="ui-btn ui-icon-carat-l ui-btn-icon-left ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 
 			<div role="main" class="ui-content">
