No possible to search a city from mainpage if not in Locationlist

--- a/index.html
+++ b/index.html
@@ -60,9 +60,8 @@
 				<form>
                     <input id="filter-for-listview" data-type="search" placeholder="Type to search...">
                 </form>
-				<ul data-role="listview" id="locationList" data-inset="true" data-filter="true" data-input="#filter-for-listview">
+				<ul data-role="listview" id="locationList" data-inset="true" data-filter="true" data-input="#filter-for-listview"></ul>
 				
-				</ul>
 			</div><!-- /content -->
 		</div><!-- /page -->
 
