Added Min Max Temp Desc in Detail Page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 		</script>
 		<script id="detailPage" type="text/x-handlebars-template">
 			<h1>{{city.name}}</h1>
-			<h2>{{temp list.0.temp.max}}</h2>
-			<h2>{{temp list.0.temp.min}}</h2>
+			<h2>Max: {{temp list.0.temp.max}}</h2>
+			<h2>Min: {{temp list.0.temp.min}}</h2>
 			<div id="days">
 				{{#each list}}
 					<div class="day">
