Fixed Bug in Detailpage
No Temps were shown when a location was added,
Fixed with render expression in success callback from ajax

--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
 		</div><!-- /page -->
 		<div data-role="page" id="detail">
-
 			<div id="detailheader" data-role="header">
 				<h1>Location</h1>
 				<a href="#main" class="ui-btn ui-icon-carat-l ui-shadow ui-corner-all ui-btn-icon-left ui-btn-icon-notext"></a>
+				<a id="detailAddButton" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 
 			<div role="main" class="ui-content">
