If no country Icon exsists then show nothing

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
 
 			</div>
 		</script>
+		<script id="searchResultsTemplate" type="text/x-handlebars-template">
+			<li class='foundLocations' id="{{id}}"><div>{{name}}</div> {{country sys.country}}</li>
+		</script>
 		<div data-role="page" id="main">
 			<div data-role="header">
 				<h1>MobileWeather</h1>
