searchResults will be cleared when backToMain clicked

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<div data-role="page" id="add">
 			<div data-role="header">
 				<h1>Add Location</h1>
-				<a href="#main" class="ui-btn ui-icon-carat-l ui-shadow ui-corner-all ui-btn-icon-left ui-btn-icon-notext"></a>
+				<a id="backToMainFromAdd" href="#main" class="ui-btn ui-icon-carat-l ui-shadow ui-corner-all ui-btn-icon-left ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 
 			<div role="main" class="ui-content">
