--- a/index.html
+++ b/index.html
@@ -67,8 +67,9 @@
 				<form>
                     <input id="filter-for-listview" data-type="search" placeholder="Type to search...">
                 </form>
-				<ul data-role="listview" id="locationList" data-inset="true" data-filter="true" data-input="#filter-for-listview"></ul>
-				
+				<div id="locationListWraper">
+					<ul data-role="listview" id="locationList" data-inset="true" data-filter="true" data-input="#filter-for-listview"></ul>
+				</div>
 			</div><!-- /content -->
 		</div><!-- /page -->
 
