--- a/index.html
+++ b/index.html
@@ -89,11 +89,12 @@
 			<div id="detailheader" data-role="header">
 				<h1>Location</h1>
 				<a href="#main" class="ui-btn ui-icon-carat-l ui-shadow ui-corner-all ui-btn-icon-left ui-btn-icon-notext"></a>
-				<a id="detailAddButton" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
+				<a id="detailAddButton" data-role="button" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 
 			<div role="main" class="ui-content">
-				
+				<div id="alert"></div>
+				<div id="cityDetail"></div>
 			</div><!-- /content -->
 		</div><!-- /page -->
 		<div data-role="page" id="compare">
