--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 			<div role="main" class="ui-content">
 				<label for="searchLocation">Search Input:</label>
 				<input type="text" name="search" id="searchLocation" value="" />
+				<div style="display:none" id="searchError" class="alert alert-danger">No Location found or other Error</div>
 				<ul data-role="listview" data-inset="true" id="searchResults"></ul>
 			</div><!-- /content -->
 
