Taphold showing icons in header and checkboxes in list

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 			<div data-role="header">
 				<h1>MobileWeather</h1>
 				<button id="locateMe" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location"></button>
-				<a href="#add" id="addLocation" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-plus ui-btn-icon-notext"></a>
+				<a href="#add" id="addLocation" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-search ui-btn-icon-notext"></a>
 			</div><!-- /header -->
 			<div role="main" class="ui-content">
                 <div  style="display:none" id="locationError" class="alert alert-danger" role="alert">
