--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<a id="delete" style="display:none" class='ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-delete'></a>
 				<a id="locateMe" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-location"></a>
 				<a href="#add" id="addLocation" class="ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-icon-search ui-btn-icon-notext"></a>
-				<a id='compare' style="display:none" class='ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-recycle'></a>
+				<a id='compareButton' style="display:none" class='ui-btn ui-shadow ui-corner-all ui-btn-icon-right ui-btn-icon-notext ui-icon-recycle'></a>
 			</div><!-- /header -->
 			<div role="main" class="ui-content">
                 <div  style="display:none" id="locationError" class="alert alert-danger" role="alert">
