--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		</script>
 		<script id="detailPage" type="text/x-handlebars-template">
 			<div id="dailyInformation">
-				<img class="detailImage" src="http://openweathermap.org/img/w/{{list.0.weather.0.icon}}.png">
+				<div class="detailImage"><img src="http://openweathermap.org/img/w/{{list.0.weather.0.icon}}.png"></div>
 				<div class="detailTemp">{{temp list.0.temp.day}}</div>
 				<div class="detailCity">{{city.name}}</div>
 			</div>
